--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <header>
 
     <title> Login </title>
-    <meta charset = UTF-8" />
-    <link rel = "stylesheet" href = "./style.css">
+    <meta charset = "UTF-8" />
+    <link rel = "stylesheet" href = "./style.css" />
 </header>
 
 <body>
