streaming presque ok, démarrage du OPDL

--- a/src/login.html
+++ b/src/login.html
@@ -25,7 +25,11 @@
             </div>
 
             <button type = "submit" id = "buttonON"> Connect </button>
+
         </form>
+
+        <button type ="link" href = "vidz.html" id = "vidz"> videos </button>
+
     </div>
 
     <script type = "text/javascript" src = "./app.js"> </script>
