fixed some issues

--- a/src/player.html
+++ b/src/player.html
@@ -14,7 +14,8 @@
 
 <div>
     <!-- chemin sur le mac -->
-    <video src = "http://localhost:3000/api/onepiece?video=~/Desktop/wiwi.mp4" width = "400" height= "300" controls></video>
+    <video src = "http://localhost:3000/api/onepiece?video=vid.mp4&token=
+    eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.ozg5fxQeyDOTjcpdESPccXCNYTYJmIOzYBNFYOzBM8Y" width = "400" height= "300" controls></video>
     <!-- chemin sur le lenovo -->
     <!-- video src = "http://localhost:3000/api/onepiece?video=~/Desktop/wiwi.mp4" width = "400" height= "300" controls></video>
     -->
@@ -25,5 +26,5 @@
 </div>
 
 </body>
-
+<script src = 'app.js'/>
 </html>
