recup lenovo main clean

--- a/src/player.html
+++ b/src/player.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- OLD -->
+    <!-- OLD -->
+    <!-- OLD -->
 <head>
 <link rel = "stylesheet" href = "./player.css" />
     <meta charset="UTF-8">
@@ -13,7 +16,6 @@
     <h2>Ici on retrouve les vidéos sur les plus grands des trésors</h2>
     <div id = "player">
     <button id = "previous" onclick = "previous()"><-</button>
-            <!-- <video id = "lavid" width = "400" height= "300" controls type = "video/mp4"></video> -->
              <video id = "lavid" src = "http://localhost:3000/api/onepiece?video=one%20piece%20700.mp4&token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.ozg5fxQeyDOTjcpdESPccXCNYTYJmIOzYBNFYOzBM8Y"
              width = "400" height= "300" controls></video>
         <button id = "next" onClick = "next()">-></button>
